Add link for the git file

--- a/README
+++ b/README
@@ -17,5 +17,5 @@ In addition I introduced the following features
   but database has columns to store other these attribtues)
 
 
-SimpleToDoApp.gif walks thru the completed stores.
+https://github.com/srikumar220/SimpleToDoApp/blob/master/SimpleTodoApp.gif walks thru the completed stores.
 
